changed algorithm to not afect html tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p>
         Corona virus Corona vírus Corona Virus Covid Covid-19 Covid19 Covid20
         Covid-12 Covid-1 Covid1 Covid.
-        <a>div</a>
+        <a href="coronavirus">coronavirusbr</a>
       </p>
     </div>
   </body>
